# acvp-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.ci.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  store.py
backend/app/api/: algorithms.py  login.py  metadata.py  requests.py  test_sessions.py  validations.py  vector_sets.py
backend/app/core/: auth.py  config.py  jobs.py  refs.py  seed.py  tls.py  totp.py
backend/app/crypto_boundary/: client.py  registration.py
backend/app/models/: certify.py  envelope.py  login.py  metadata.py  paging.py  registration.py
backend/app/workers/: tasks.py
backend/docker/: backend-entrypoint.sh
backend/nginx/: Dockerfile  nginx.conf  nginx.conf.template
backend/scripts/: authz_demo.py  demo_flow.py
backend/tests/: conftest.py  fake_genval_runner.py  helpers.py  test_authz.py  test_cancel.py  test_certify.py  test_crypto_boundary.py  test_disposition.py  test_envelope.py  test_errors.py  test_flow.py  test_is_sample.py  test_jwt_claims.py  test_login.py  test_login_refresh.py  test_metadata.py  test_mtls.py  test_nist_end_to_end.py  test_nist_real_engine.py  test_nist_registration_mapping.py  test_registration.py  test_requests_and_algorithms.py  test_resubmit.py  test_results_submission.py  test_results_validation.py  test_session_listing.py  test_session_results.py  test_session_token.py  test_show_expected.py  test_totp.py  test_validations.py  test_vector_expiry.py  test_vector_retry.py  test_vectorset_list.py  test_worker_contract.py
(+43 files in other folders)
